styles/globals.css
/* font */
/* vietnamese */
@font-face {
  font-family: 'VT323';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/vt323/v15/pxiKyp0ihIEF2isQFJXGdg.woff2) format('woff2');
  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
}

/* latin-ext */
@font-face {
  font-family: 'VT323';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/vt323/v15/pxiKyp0ihIEF2isRFJXGdg.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: 'VT323';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/vt323/v15/pxiKyp0ihIEF2isfFJU.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'VT323', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  scroll-behavior: smooth;
  overflow-x: auto;
}

* {
  box-sizing: border-box;
}

.container {
  margin-top: 4.5rem;
}

.icon-small::before {
  font-size: small;
}

.light-svg {
  margin-bottom: 7px;
  cursor: pointer;
}

.show {
  display: block !important;
}

.pointer-cursor {
  cursor: pointer;
}

.modal {
  z-index: 99999;
}

/* --------------------------------------- */
/* nav */
.navbar-brand {
  font-size: larger;
}

.sub-brand {
  margin-left: -3px;
}

.darkmode-toggler {
  position: fixed;
  right: 10px;
  top: 3px;
  z-index: 9999;
}

.nav-link {
  margin-top: 3px;
  font-size: 20px;
}

/* --------------------------------------- */
/* footer */
.footer-icon a {
  transition: transform 0.1s ease-out;
}

.footer-icon a:hover {
  transform: scale(1.2);
}

/* --------------------------------------- */
/* home / lists */
.sort-by {
  display: flex;
  flex-direction: row;
}

.sort-by div {
  position: relative;
}

#card {
  background-color: white !important;
  min-height: 440px;
  position: relative;
}

.card-container {
  margin-top: 0.5rem;
  justify-content: center;
  align-items: center;
}

.border-card-dark {
  border: 1px solid rgba(0, 0, 0, .125) !important;
}

.border-light {
  box-shadow: 0 3px 10px rgb(255, 255, 255, .275) !important;
}

.card-lists {
  margin: 1rem;
  width: 22rem;
  overflow: hidden !important;
  transform: scale(1);
  transition: all .25s ease-in-out;
}

.card-lists:hover {
  transform: scale(1.025);
}

.thumbnail-wrapper {
  max-height: 180px;
  overflow: hidden !important;
}

.card-title {
  max-height: 76px;
  overflow: hidden;
}

.card-desc {
  max-height: 100px;
  overflow: hidden;
  margin-top: 1px;
  text-align: justify;
  text-justify: inter-word;
  font-size: max(1rem, .75vw);
}

.card-desc.text-light {
  color: #CCCCCC !important;
}

.card-desc.text-dark {
  color: #6c757d !important;
}

.card-small-el {
  font-size: max(1rem, .7vw);
}

.card-tags-container {
  max-width: 95%;
  white-space: nowrap;
  margin-top: 1rem;
  overflow-x: scroll;
  scrollbar-width: none;
  -ms-overflow-style: none;
  position: absolute;
  bottom: 1rem;
  left: 1rem;
}

.card-tags-container::-webkit-scrollbar {
  display: none;
}

.card-tags {
  margin-right: 0.5rem;
  border-radius: 1rem !important;
  background-color: #f8f9fa;
  padding: 2px 9px;
  font-size: initial;
}

/* --------------------------------------- */
/* searchbar */
.search-shrink {
  width: 85%;
  -webkit-transition: width 0.3s;
  -moz-transition: width 0.3s;
  -ms-transition: width 0.3s;
  -o-transition: width 0.3s;
  transition: width 0.3s;
}

.search-shrink:focus {
  width: 100%;
}

.float-right {
  float: right;
}

.search-tags {
  margin-top: .5rem;
}

/* --------------------------------------- */
/* custom links */
.link-nodecor {
  color: inherit !important;
  text-decoration: none !important;
  font-size: inherit !important;
}

.subtle-link {
  display: inline-block;
  position: relative;
  color: inherit;
  text-decoration: none;
  font-size: inherit;
}

.subtle-link:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #0087ca;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.subtle-link:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

/* --------------------------------------- */
/* media queries */
@media (max-width: 992px) {
  .search-shrink {
    width: 100%;
    float: none !important;
  }

  .card-lists {
    max-width: 90%;
    width: 900px;
  }

  .darkmode-toggler {
    right: 70px;
    top: 0px;
  }

  .post-content {
    max-width: 90%;
  }

}

@media (max-width: 350px) {
  .sort-by {
    flex-direction: column;
  }
}

@media (max-width: 333px) {
  .darkmode-toggler-btn {
    display: none;
  }
}

